--- a/circular-carousel-indicator.css
+++ b/circular-carousel-indicator.css
@@ -4,13 +4,13 @@
   border-radius: 50%;
   background-color: transparent;
   margin: 1px -1px;
-  border: 1px solid pink;
+  border: 1px solid white;
   opacity: 1;
   transition: border-color 0.3s ease;
 }
 
 .carousel-indicators .active {
-  width: 10px;
+  width: 18px;
   height: 10px;
   margin-top: -0.7px;
   background-color: white;
